--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,16 @@
     max-width: 300px;
     position: relative;
 }
+.connected {
+    padding: 2px 20px;
+    border-radius: 5px;
+    max-width: 300px;
+    display: flex;
+    align-self: center;
+}
+.connected h6 {
+    color: #9d9191;
+}
 .msg p {
     margin: 0px;
 }
